--- a/Languages/ChineseSimplified/DefInjected/RecipeDef/Amazake.xml
+++ b/Languages/ChineseSimplified/DefInjected/RecipeDef/Amazake.xml
@@ -2,8 +2,8 @@
 <LanguageData>
 
   <MakeAmazake.label>甘酒(10)</MakeAmazake.label>
-  <MakeAmazake.description>以大米为原料酿造的甘酒。</MakeAmazake.description>
-  <MakeAmazake.jobString>正在酿造甘酒。</MakeAmazake.jobString>
+  <MakeAmazake.description>以大米作为原料来酿制甘酒。</MakeAmazake.description>
+  <MakeAmazake.jobString>正在酿制甘酒。</MakeAmazake.jobString>
 
 
 </LanguageData>
