--- a/Languages/ChineseSimplified/DefInjected/ThingDef/Items_meal.xml
+++ b/Languages/ChineseSimplified/DefInjected/ThingDef/Items_meal.xml
@@ -52,8 +52,8 @@
   <ZP_SaltGrilledFish.label>盐烤鱼</ZP_SaltGrilledFish.label>
   <ZP_SaltGrilledFish.description>将鲜鱼抹上盐然后串在竹签上用炭火烘焙，这种简单而美味的吃法无论在哪里都相当受欢迎呢。</ZP_SaltGrilledFish.description>
 
-  <ZP_SteamedFish.label>白煮鱼</ZP_SteamedFish.label>
-  <ZP_SteamedFish.description>将鱼用合适的火候煮熟，然后蘸着调料吃。</ZP_SteamedFish.description>
+  <ZP_SteamedFish.label>煮鱼</ZP_SteamedFish.label>
+  <ZP_SteamedFish.description>将鱼用合适的火候煮熟，然后配上配菜、蘸着调料吃就可以了。</ZP_SteamedFish.description>
 
 
 </LanguageData>
